@@ -28,6 +28,10 @@
         <value condition="Container.Content(movies) + !String.StartsWith(ListItem.Path,plugin://)">$INFO[ListItem.Path,,/extrafanart/]</value>
         <value condition="!Container.Content(movies) + !String.StartsWith(ListItem.Path,plugin://)">$INFO[ListItem.FileNameAndPath,,/extrafanart/]</value>
     </variable>
+    <variable name="Defs_VideoInfo_Images2">
+        <value condition="Container.Content(movies) + !String.StartsWith(ListItem.Path,plugin://)">$INFO[ListItem.Path,,/extrathumbs/]</value>
+        <value condition="!Container.Content(movies) + !String.StartsWith(ListItem.Path,plugin://)">$INFO[ListItem.FileNameAndPath,,/extrathumbs/]</value>
+    </variable>
 
     <variable name="Defs_VideoInfo_Extras">
         <value condition="Container.Content(movies) + String.IsEmpty(Window(home).Property(SpecialFeatures.Widget)) + !String.StartsWith(ListItem.Path,plugin://)">$INFO[ListItem.Path,,/Extras/]</value>
